Sua lai dia chi +1 so thu

--- a/Do-An/Areas/Admin/Views/DonHangs/Details.cshtml
+++ b/Do-An/Areas/Admin/Views/DonHangs/Details.cshtml
@@ -6,7 +6,7 @@
     var dsDHCT = (List<WebApplication17.Models.DonHangChiTiet>)ViewBag.DHCT;
     decimal total = 0;
 
-    // Lấy phí vận chuyển đã lưu trong DonHang (đúng theo tỉnh/thành phố)
+    // Lấy phí vận chuyển đã lưu trong DonHang 
     decimal phiVC = Model.phivanchuyen ?? 0;
 }
 
@@ -23,7 +23,7 @@
         </li>
     </ul>
     <ul class="navbar-nav ml-auto">
-        <!-- Navbar Search và thông báo giữ nguyên -->
+       
     </ul>
 }
 
