--- a/Do-An/Views/Shared/_Layout.cshtml
+++ b/Do-An/Views/Shared/_Layout.cshtml
@@ -327,7 +327,7 @@ $(document).ready(function () {
         });
         $("#btnShowMore").click(function () {
             $(".more-item").slideToggle(); // hiện/ẩn
-            $(this).text($(this).text() === "Xem thêm" ? "Thu gọn" : "Xem thêm");
+            $(this).text($(this).text() === "Thu gọn" ? "Xem thêm" : "Thu gọn");
         });
 
         // Theo dõi cuộn trang
@@ -344,8 +344,6 @@ $(document).ready(function () {
         });
     }
 });
-
-
     </script>
 
 
@@ -353,11 +351,8 @@ $(document).ready(function () {
     <script src="~/Content/assets/js/bootstrap.bundle.min.js"></script>
     <script src="~/Content/assets/js/owl.carousel.min.js"></script>
     <script src="~/Content/assets/js/bootstrap-input-spinner.js"></script>
-    <script src="~/Content/assets/js/jquery.plugin.min.js"> </script>
     
     <script src="~/Content/assets/js/jquery.waypoints.min.js"></script>
-    <script src="~/Content/assets/js/jquery.countdown.min.js"></script>
-    <script src="~/Content/assets/js/jquery.magnific-popup.min.js"></script>
     <!-- Main JS -->
     <script src="~/Content/assets/js/main.js"></script>
     <script src="~/Content/assets/js/demos/demo-13.js"></script>
