--- a/Do-An/Views/DonHangs/Index.cshtml
+++ b/Do-An/Views/DonHangs/Index.cshtml
@@ -23,14 +23,14 @@
                         <table class="table table-cart table-mobile">
                             <thead>
                                 <tr>
-                                    <th>Mã Đơn Hàng</th>
-                                    <th>Họ Tên</th>
-                                    <th>Điện Thoại</th>
-                                    <th>Địa Chỉ</th>
-                                    <th>Ngày Đặt</th>
-                                    <th>Tổng Tiền</th>
-                                    <th>Trạng Thái</th>
-                                    <th></th>
+                                    <th class="col-ma">Mã ĐH</th>
+                                    <th class="col-ten">Họ Tên</th>
+                                    <th class="col-sdt">Điện Thoại</th>
+                                    <th class="col-diachi">Địa Chỉ</th>
+                                    <th class="col-ngay">Ngày Đặt</th>
+                                    <th class="col-tongtien">Tổng Tiền</th>
+                                    <th class="col-trangthai">Trạng Thái</th>
+                                    <th class="col-chitiet"></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -69,7 +69,7 @@
                                                 </td>
                                                 <td class="remove-col">
                                                     <a href="~/DonHangs/ChiTietDonHang/@item.madonhang" class="btn-remove donhangchitiet">
-                                                        <ion-icon name="ellipsis-vertical-outline"></ion-icon>Chi tiết
+                                                        <ion-icon name="ellipsis-vertical-outline">Chi tiết</ion-icon>
                                                     </a>
                                                 </td>
                                             </tr>
