--- a/Do-An/Views/Home/TinTuc.cshtml
+++ b/Do-An/Views/Home/TinTuc.cshtml
@@ -7,7 +7,7 @@
 
 <div class="news-list-wrapper">
     <div class="container-news">
-       
+
 
 
         @if (Model != null && Model.Any())
@@ -16,8 +16,9 @@
             {
                 <div class="news-item">
                     <div class="news-thumb">
-<img src="@Url.Content("~/wwwroot/tintuc/" + (String.IsNullOrEmpty(item.hinhanh) ? "placeholder.jpg" : item.hinhanh))"
-     alt="@item.tieude" />                    </div>
+                        <img src="@Url.Content("~/wwwroot/tintuc/" + (String.IsNullOrEmpty(item.hinhanh) ? "placeholder.jpg" : item.hinhanh))"
+                             alt="@item.tieude" />
+                    </div>
 
 
                     <div class="news-main">
@@ -26,10 +27,9 @@
 
 
                         @{
-                            // Bỏ tag HTML
                             var plain = System.Text.RegularExpressions.Regex.Replace(item.noidung ?? "", "<.*?>", "");
 
-                            // Giải mã các entity HTML (&nbsp;, &aacute; => à, á...)
+                         
                             plain = System.Web.HttpUtility.HtmlDecode(plain);
 
                             var summary = plain.Length > 180 ? plain.Substring(0, 180) + "..." : plain;
