--- a/Do-An/Views/KhachHangs/UserInfor.cshtml
+++ b/Do-An/Views/KhachHangs/UserInfor.cshtml
@@ -28,19 +28,19 @@
                     @Html.TextBoxFor(m => m.dienthoai, new { @class = "form-control", id = "dienthoai" })
                 </div>
                 <div class="col-md-4">
-                    <label class="form-label">Tỉnh / Thành Phố</label>
-                    <select class="form-control" id="tinh" name="tinh" ></select>
+                    <label class="form-label">Tỉnh / Thành phố</label>
+                    @Html.TextBoxFor(m => m.tinh, new { @class = "form-control", id = "tinh", @readonly = "readonly" })
                 </div>
             </div>
 
             <div class="row mb-2">
                 <div class="col-md-2">
                     <label class="form-label">Quận / Huyện</label>
-                    @Html.TextBoxFor(m => m.huyen, new { @class = "form-control", id = "huyen" })
+                    @Html.TextBoxFor(m => m.huyen, new { @class = "form-control", id = "huyen", @readonly = "readonly" })
                 </div>
                 <div class="col-md-2">
                     <label class="form-label">Phường / Xã</label>
-                    @Html.TextBoxFor(m => m.xa, new { @class = "form-control", id = "xa" })
+                    @Html.TextBoxFor(m => m.xa, new { @class = "form-control", id = "xa", @readonly = "readonly" })
                 </div>
             </div>
 
@@ -55,24 +55,12 @@
         </form>
     </div>
 </main>
+
 <script src="~/Scripts/jquery-3.7.0.min.js"></script>
 
 <script>
 $(document).ready(function(){
-    // Load danh sách tỉnh/thành phố từ JSON
-  $.getJSON('/Content/diachi.json', function(data){
-    var select = $("#tinh");
-    select.empty();
-    $.each(data.tinh, function(index, item){
-        select.append('<option value="'+item+'">'+item+'</option>');
-    });
-    // Set lại value sau khi load
-    var currentTinh = "@Model.tinh";
-    if(currentTinh){
-        select.val(currentTinh);
-    }
-});
-
+    // Bỏ luôn đoạn load JSON tỉnh thành
     // Click cập nhật
     $("#btnUpdate").click(function () {
         var data = {
